# public/swagger/swagger.yaml
@@ -489,6 +489,241 @@ paths:
           description: "Validation error"
         "500":
           description: "An error occured while attempting to perform operation"
+
+  /auth/login:
+    post:
+      tags:
+      - "Auth"
+      summary: "Logs in a public user/reader"
+      description: ""
+      consumes:
+      - "application/x-www-form-urlencoded"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "email"
+        in: "formData"
+        description: "email of the user"
+        required: true
+        type: "string"
+      - name: "password"
+        in: "formData"
+        description: "password of the user"
+        required: true
+        type: "string"
+      security:
+      - jwt_token: []
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Reader"
+        "401":
+          description: "Wrong Email or Password"
+        "422":
+          description: "Validation error"
+        "500":
+          description: "An error occured while attempting to perform operation"
+
+  /auth/register:
+    post:
+      tags:
+      - "Auth"
+      summary: "Registers a public user/reader"
+      description: ""
+      consumes:
+      - "application/x-www-form-urlencoded"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "name"
+        in: "formData"
+        description: "name of the user"
+        required: true
+        type: "string"
+      - name: "email"
+        in: "formData"
+        description: "email of the user"
+        required: true
+        type: "string"
+      - name: "password"
+        in: "formData"
+        description: "password of the user"
+        required: true
+        type: "string"
+      security:
+      - jwt_token: []
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Reader"
+        "401":
+          description: "Wrong Email or Password"
+        "422":
+          description: "Validation error"
+        "500":
+          description: "An error occured while attempting to perform operation"
+
+  post/all:
+    get:
+      tags:
+      - "Post"
+      summary: "View all public posts"
+      description: ""
+      produces:
+      - "application/json"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Post"
+        "500":
+          description: "An error occured while attempting to perform operation"
+
+  post/show/{post_id}:
+    get:
+      tags:
+      - "Post"
+      summary: "View a post"
+      description: ""
+      produces:
+      - "application/json"
+      parameters:
+      - name: "post_id"
+        in: "path"
+        description: "ID of the post is to be returned"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Post"
+        "404":
+          description: "Post does not exist"
+        "500":
+          description: "An error occured while attempting to perform operation"
+
+  post/increase_views/{post_id}:
+    get:
+      tags:
+      - "Post"
+      summary: "Increases the counter of the views for a post"
+      description: ""
+      produces:
+      - "application/json"
+      parameters:
+      - name: "post_id"
+        in: "path"
+        description: "ID of the post"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Post"
+        "404":
+          description: "Post does not exist"
+        "500":
+          description: "An error occured while attempting to perform operation"
+
+  /comment/save:
+    post:
+      tags:
+      - "Comment"
+      summary: "Makes a comment"
+      description: ""
+      consumes:
+      - "application/x-www-form-urlencoded"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "reader_id"
+        in: "formData"
+        description: "id of the user"
+        required: true
+        type: "integer"
+      - name: "post_id"
+        in: "formData"
+        description: "id of the post"
+        required: true
+        type: "integer"
+      - name: "message"
+        in: "formData"
+        description: "Comment message"
+        required: true
+        type: "string"
+      security:
+      - jwt_token: []
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Comment"
+        "401":
+          description: "Wrong Email or Password"
+        "422":
+          description: "Validation error"
+        "500":
+          description: "An error occured while attempting to perform operation"
+
+  /comment/reply:
+    post:
+      tags:
+      - "Comment"
+      summary: "Makes a reply to a comment"
+      description: ""
+      consumes:
+      - "application/x-www-form-urlencoded"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "reader_id"
+        in: "formData"
+        description: "id of the user"
+        required: true
+        type: "integer"
+      - name: "comment_id"
+        in: "formData"
+        description: "id of the comment"
+        required: true
+        type: "integer"
+      - name: "message"
+        in: "formData"
+        description: "Reply message"
+        required: true
+        type: "string"
+      security:
+      - jwt_token: []
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Reply"
+        "401":
+          description: "Wrong Email or Password"
+        "422":
+          description: "Validation error"
+        "500":
+          description: "An error occured while attempting to perform operation"        
   
 securityDefinitions:
   api_key:
@@ -527,11 +762,50 @@ definitions:
         $ref: "#/definitions/User"
       dislikes:
         $ref: "#/definitions/User"
+
+  Comment:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int32"
+      reader:
+        $ref: "#/definitions/Reader"
+      message:
+        type: "string"
+      post:
+        $ref: "#/definitions/Post"
+
+  Reply:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int32"
+      reader:
+        $ref: "#/definitions/Reader"
+      message:
+        type: "string"
+      comment:
+        $ref: "#/definitions/Comment"
         
   User:
     type: "object"
     properties:
       user_id: 
+        type: "integer"
+        format: "int32"
+      email:
+        type: "string"
+        format: "email"
+        example: "abc@gmail.com"
+      name:
+        type: "string"
+
+  Reader:
+    type: "object"
+    properties:
+      id: 
         type: "integer"
         format: "int32"
       email:
